common/techxper-updates/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: techxper-updates
  name: techxper-updates
  namespace: common
spec:
  selector:
    matchLabels:
      app: techxper-updates
  template:
    metadata:
      labels:
        app: techxper-updates
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - image: docker.io/sunandad2090/techexper:updates2301b
        imagePullPolicy: Always
        name: techxper-updates
        ports:
        - containerPort: 80
          protocol: TCP
      imagePullSecrets:
      - name: regcred
