common/techxper-updates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: techxper-updates
  namespace: common
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: techxper-updates
  type: ClusterIP
